feat: add Coordinates interface for latitude and longitude
feat: implement Haversine distance calculation between geographic coordinates

feat: add isValidCoordinates function to validate geographic coordinates

feat: change modelValue type to number and update input type to number

feat: add CoordinatePoint component for latitude and longitude input

feat: replace input fields with CoordinatePoint components for location input

feat: add TheHeader component and update app layout; enhance ESLint rules and Nuxt configuration

feat: add DispalyResult component to display distance between points

feat: refactor stylesheets; consolidate and enhance global styles, remove unused files

feat: add default location coordinates for distance calculations

feat: refactor styles and components; enhance layout, typography, and grid structure

feat: implement rounding utility and add geographic range constants; enhance distance calculation accuracy

feat: update application structure and components; enhance UI and distance calculation features

feat: update color variables and typography styles; enhance UI consistency and remove unused sizing styles

feat: refactor layout and enhance SEO; update main form structure and add meta tags for better accessibility

feat: update typography styles; consolidate font-weight definitions and add font-face declaration for improved consistency

feat: enhance form validation and error handling; add validation styles, reset functionality, and error messages for improved user experience

feat: add new SVG icons for GitHub, moon, refresh, and sun; enhance visual assets for improved UI

feat: integrate nuxt-svgo for optimized SVG handling; update button styles and enhance reset functionality in AlertCard

feat: add GPS icon and geolocation button; enhance form functionality with location retrieval and UI updates

feat: replace LazyElementGeolocationButton with LazyOptionsGeolocationButton; add new GeolocationButton component and SVG icon for improved

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "geo-distance--app",
   "private": false,
-  "version": "0.0.1",
+  "version": "0.0.2",
   "author": "pagetailoring.com",
   "repository": {
     "type": "git",
@@ -13,6 +13,7 @@
     "build": "nuxi build",
     "clean": "nuxi cleanup && nuxi prepare",
     "dev": "nuxi dev",
+    "deploy": "nuxi generate && scp -rp -P 41556 .output/public/. kvzbeoc@sshcloud.cluster024.hosting.ovh.net:~/geo-distance--app",
     "generate": "nuxi generate",
     "host": "nuxi dev --host",
     "lint": "eslint .",
@@ -25,8 +26,10 @@
   "dependencies": {
     "@nuxt/eslint": "^1.4.1",
     "@nuxt/fonts": "0.11.4",
+    "@nuxtjs/leaflet": "1.2.6",
     "@vueuse/nuxt": "13.3.0",
     "nuxt": "^3.17.4",
+    "nuxt-svgo": "4.2.1",
     "vue": "^3.5.15",
     "vue-router": "^4.5.1"
   },
